Closed
Bug 415017
Opened 17 years ago
Closed 17 years ago
"ASSERTION: Fault in cycle collector: script pointer traversal failed"
Categories
(Core :: XPCOM, defect, P1)
Core
XPCOM
Tracking
()
RESOLVED
FIXED
mozilla1.9beta3
People
(Reporter: jruderman, Assigned: peterv)
References
Details
(Keywords: assertion, memory-leak, regression)
Attachments
(1 file, 2 obsolete files)
|
2.20 KB,
patch
|
jst
:
review+
jst
:
superreview+
beltzner
:
approval1.9b3+
|
Details | Diff | Splinter Review |
Starting last night, I've been seeing this sometimes when playing with XUL / XBL:
###!!! ASSERTION: Fault in cycle collector: script pointer traversal failed (ptr: 3d116a68)
: 'Not Reached', file /Users/jruderman/trunk/mozilla/xpcom/base/nsCycleCollector.cpp, line 1009
I haven't been able to make a testcase, but I got it in a debugger and let peterv look at it, and I think he has a patch.
Flags: blocking1.9?
| Assignee | ||
Comment 1•17 years ago
|
||
Jesse, could you try this? Thanks!
Assignee: nobody → peterv
Status: NEW → ASSIGNED
| Reporter | ||
Comment 2•17 years ago
|
||
Seems to fix the problem :)
| Assignee | ||
Comment 3•17 years ago
|
||
We need to fix this for beta 3, faults lead to large leaks because we stop collecting.
I have a slightly different patch that should fix the problem too, I'm worried that some code assumes that QI'ing to nsIXPConnectWrappedJS means that the nsWrappedJS is still valid.
OS: Mac OS X → All
Priority: -- → P1
Hardware: PC → All
Target Milestone: --- → mozilla1.9beta3
| Assignee | ||
Comment 4•17 years ago
|
||
Jesse, it'd be great if you could try this one too. Sorry about making you test another one.
Attachment #300591 -
Attachment is obsolete: true
Updated•17 years ago
|
Flags: blocking1.9? → blocking1.9+
| Reporter | ||
Comment 5•17 years ago
|
||
I got lots of
###!!! ASSERTION: How did we get here?: 'tmp->IsValid()', file /Users/jruderman/trunk/mozilla/js/src/xpconnect/src/xpcwrappedjs.cpp, line 82
while testing with the first patch.
| Reporter | ||
Comment 6•17 years ago
|
||
I get that a lot with (just) the second patch, too.
| Assignee | ||
Comment 7•17 years ago
|
||
Attachment #300641 -
Attachment is obsolete: true
Attachment #300751 -
Flags: superreview?
Attachment #300751 -
Flags: review?
| Assignee | ||
Updated•17 years ago
|
Attachment #300751 -
Flags: superreview?(jst)
Attachment #300751 -
Flags: superreview?
Attachment #300751 -
Flags: review?(jst)
Attachment #300751 -
Flags: review?
Updated•17 years ago
|
Attachment #300751 -
Flags: superreview?(jst)
Attachment #300751 -
Flags: superreview+
Attachment #300751 -
Flags: review?(jst)
Attachment #300751 -
Flags: review+
| Assignee | ||
Comment 8•17 years ago
|
||
Comment on attachment 300751 [details] [diff] [review]
v3
Fixes a fault in the cycle collector, which make us leak a lot. Just removing some code that is obsolete, because we've already made the cycle collector pass in the correct pointer into this function.
Attachment #300751 -
Flags: approval1.9b3?
Comment 9•17 years ago
|
||
Comment on attachment 300751 [details] [diff] [review]
v3
a=beltzner
Attachment #300751 -
Flags: approval1.9b3? → approval1.9b3+
| Assignee | ||
Updated•17 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•