Fix for bug 415017 ("ASSERTION: Fault in cycle collector: script pointer traversal failed"). r/sr=jst, a=beltzner.